# 3-python-package-market-correction

./: .gitignore  Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: build.yaml
src/: __main__.py  customexcuses.py
src/procrastination_helper/: __init__.py  __main__.py  customexcuses.py  delay_timer.py  get_excuse.py  list_of_excuses.py  quotes.py
src/procrastination_helper/data/: __init__.py  excusesData.py
src/procrastinationhelper/: __main__.py  customexcuses.py  quotes.py  test_quotes.py
src/procrastinationhelper/data/: quotesData.py
src/procrastinnationhelper/: __main__.py  customexcuses.py
src/procrationationhelper/: __main__.py  quotes.py
tests/: test_customexcuses.py  test_delay_timer.py  test_excuses.py  test_list_of_excuses.py  test_quotes.py  test_wisdom.py
